--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "Minimalist no_std + no_alloc PQC core: NIST Level 5 Kyber1024 + Level 3 Dilithium3"
 license = "MIT"
 keywords = ["kyber", "dilithium", "pqc", "no-std", "no-alloc"]
-categories = ["pqc", "no-std", "no-alloc", "embedded"]
+categories = ["cryptography", "no-std", "embedded"]
 repository = "https://github.com/AaronSchnacky1/pqc-combo"
 readme = "README.md"
 authors = ["Aaron Schnacky <aaronschnacky@gmail.com>"]
