--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test
-      - run: cargo test --features alloc
+
+      - name: 🧪 Test 1: Default (no_std + no_alloc)
+        run: cargo test
+
+      - name: 🧪 Test 2: Alloc (no_std + alloc)
+        run: cargo test --features alloc
+
+      - name: 🧪 Test 3: STD (std + alloc)
+        run: cargo test --features std  # <-- NEW STEP
