--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,57 +2,145 @@ name: CI
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ master ]
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: -D warnings
 
 jobs:
-  test:
-    name: Test on ${{ matrix.os }} / ${{ matrix.rust }} / ${{ matrix.features }}
+  # ──────────────────────────────────────────────────────────────
+  # 1. Full matrix – all 5 feature combos + 3 OSes
+  # ──────────────────────────────────────────────────────────────
+  test-matrix:
+    name: ${{ matrix.os }} • ${{ matrix.features || 'no_std (default)' }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        rust: [stable]
-        # Define the full matrix of features to cover all environments
-        features:
-          # 1. Base PQC (no_std, no_alloc) - Uses default features = []
-          - "default"
-          # 2. PQC + AES-GCM (no_std, no_alloc)
-          - "aes-gcm"
-          # 3. PQC + Alloc + AES-GCM (no_std, alloc)
-          - "alloc,aes-gcm"
-          # 4. PQC + Std + AES-GCM (Full, includes alloc/std tests)
-          - "std,aes-gcm"
+        os: [ubuntu-24.04, macos-14, windows-2022]
+        include:
+          - features: ""
+            name: "no_std + no_alloc"
+          - features: "aes-gcm"
+            name: "aes-gcm"
+          - features: "alloc,aes-gcm"
+            name: "alloc + aes-gcm"
+          - features: "std,aes-gcm"
+            name: "std + aes-gcm"
+          - features: "std,aes-gcm"
+            os: ubuntu-24.04
+            rust: nightly
+            name: "nightly + std + aes-gcm"
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          toolchain: ${{ matrix.rust }}
+          submodules: recursive
 
-      - name: Build C dependencies
-        run: |
-          # The pqcrypto crates require C dependencies to be built first.
-          # This is typically handled by the Rust build system, but
-          # we ensure all C tools are available for cross-compilation contexts.
-          sudo apt-get update
-          sudo apt-get install -y gcc
+      - name: Install Rust (nightly if needed)
+        if: matrix.rust == 'nightly'
+        uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: rustfmt, clippy
 
-      - name: Run Tests
-        # Use cargo test, explicitly handling the default case for clarity
+      - name: Install Rust (stable)
+        if: matrix.rust != 'nightly'
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+
+      - name: Cache cargo registry + git + build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: cargo fmt --check
+        run: cargo fmt -- --check
+
+      - name: cargo clippy (all features)
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      - name: cargo test (${{ matrix.name }})
+        run: >-
+          cargo test --verbose
+          ${{ matrix.features && format('--features "{0}"', matrix.features) || '' }}
+
+      - name: cargo test --all-features (extra safety)
+        run: cargo test --all-features --verbose
+
+  # ──────────────────────────────────────────────────────────────
+  # 2. FIPS integration tests (only on Ubuntu + std)
+  # ──────────────────────────────────────────────────────────────
+  fips-integration:
+    name: FIPS 203/204 integration tests
+    runs-on: ubuntu-24.04
+    needs: test-matrix
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ubuntu-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - run: cargo test --features std --test integration -- --exact
+
+  # ──────────────────────────────────────────────────────────────
+  # 3. Build FFI artifacts on tag
+  # ──────────────────────────────────────────────────────────────
+  ffi-release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    name: Build FFI binaries
+    runs-on: ubuntu-24.04
+    needs: [test-matrix, fips-integration]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/cache@v4
+        with:
+          path: target
+          key: ffi-${{ github.sha }}
+      - name: Build shared libs
         run: |
-          if [ "${{ matrix.features }}" == "default" ]; then
-            # Default configuration (no features enabled)
-            echo "Running: cargo test"
-            cargo test
-          else
-            # All other configurations use --no-default-features and explicitly enable features
-            echo "Running: cargo test --no-default-features --features ${{ matrix.features }}"
-            cargo test --no-default-features --features ${{ matrix.features }}
-          fi
+          cargo build --release --features std
+          mkdir -p artifacts
+          cp target/release/libpqc_combo.so artifacts/  || true
+          cp target/release/libpqc_combo.dylib artifacts/ || true
+          cp target/release/pqc_combo.dll artifacts/     || true
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ffi-binaries
+          path: artifacts/
+
+  # ──────────────────────────────────────────────────────────────
+  # 4. Publish to crates.io on tag
+  # ──────────────────────────────────────────────────────────────
+  publish:
+    if: startsWith(github.ref, 'refs/tags/v')
+    name: Publish to crates.io
+    runs-on: ubuntu-24.04
+    needs: [test-matrix, fips-integration]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/cache@v4
+        with:
+          path: target
+          key: publish-${{ github.sha }}
+      - name: Login to crates.io
+        run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Publish
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
