--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
           -- --nocapture 
 
       - name: cargo test --all-features (extra safety)
-        run: cargo test --all-features --verbose -- --nocapture 
+        run: cargo test --all-features --verbose --nocapture 
 
   # ──────────────────────────────────────────────────────────────
   # 2. FIPS integration tests (only on Ubuntu + std)
@@ -96,7 +96,51 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ubuntu-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ubuntu-cargo-${{ hashFiles('**/Cargo.loop, .registration {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 8px;
+}
+.registration h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.form-group {
+  margin-bottom: 15px;
+}
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+.form-group input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box; /* Ensures padding doesn't affect width */
+}
+.registration-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.registration-btn:hover {
+  background-color: #0056b3;
+}
+.additional-links {
+  margin-top: 15px;
+  text-align: center;
+}
+.additional-links a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: #007bff;
+}
+.additional-links a:hover {
+  text-decoration: underline;
+}ck') }}
       - run: cargo test --features std --test integration -- --exact --nocapture 
 
   # ──────────────────────────────────────────────────────────────
@@ -110,7 +154,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/cache@v4
+      - uses: actions/cache@vV4
         with:
           path: target
           key: ffi-${{ github.sha }}
@@ -146,4 +190,3 @@ jobs:
         run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - name: Publish
         run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
-```eof
