--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,6 @@ readme = "README.md"
 authors = ["Aaron Schnacky <aaronschnacky@gmail.com>"]
 homepage = "https://www.aaronschnacky.com/"
 documentation = "https://github.com/AaronSchnacky1/pqc-combo/blob/main/README.md"
-# ------------------------------------------------------------------
-# 1. FIX: Enable 'std' feature for cargo publish verification
-publish-features = ["std"]
-# ------------------------------------------------------------------
 
 include = [
     "src/**/*.rs",
@@ -23,19 +19,14 @@ include = [
     "SECURITY.md",
     "PQCkemKAT_3168.rsp",
     "PQCsignKAT_4016.rsp",
-    # ------------------------------------------------------------------
-    # 2. FIX: Include the tests directory to prevent warnings
     "tests/**/*", 
-    # ------------------------------------------------------------------
 ]
 
 [lib]
 name = "pqc_combo"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
-# Add this line to disable default features when the library is compiled
-# by default (e.g., when crates.io runs its checks).
-default-features = false
+# WARNING REMOVED: `default-features = false` was here.
 
 [features]
 default = []
@@ -49,7 +40,6 @@ std = [
     "alloc",
     "aes-gcm-crate/std",
 ]
-# NEW: FIPS 140-3 mode enables automatic PCT on key generation
 fips_140_3 = []
 kat = ["std"]
 
