--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ readme = "README.md"
 authors = ["Aaron Schnacky <aaronschnacky@gmail.com>"]
 homepage = "https://www.aaronschnacky.com/"
 documentation = "https://github.com/AaronSchnacky1/pqc-combo/blob/main/README.md"
+# ------------------------------------------------------------------
+# 1. FIX: Enable 'std' feature for cargo publish verification
+publish-features = ["std"]
+# ------------------------------------------------------------------
 
 include = [
     "src/**/*.rs",
@@ -19,14 +23,19 @@ include = [
     "SECURITY.md",
     "PQCkemKAT_3168.rsp",
     "PQCsignKAT_4016.rsp",
+    # ------------------------------------------------------------------
+    # 2. FIX: Include the tests directory to prevent warnings
     "tests/**/*", 
+    # ------------------------------------------------------------------
 ]
 
 [lib]
 name = "pqc_combo"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
-# WARNING REMOVED: `default-features = false` was here.
+# Add this line to disable default features when the library is compiled
+# by default (e.g., when crates.io runs its checks).
+default-features = false
 
 [features]
 default = []
@@ -40,6 +49,7 @@ std = [
     "alloc",
     "aes-gcm-crate/std",
 ]
+# NEW: FIPS 140-3 mode enables automatic PCT on key generation
 fips_140_3 = []
 kat = ["std"]
 
