--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,3 +86,19 @@ arbitrary = "1.3"
 # ----- INTEROP: Pure-Rust FIPS 203/204 (RustCrypto) -----
 ml-kem = "0.1.0-rc.1"
 ml-dsa = "0.1.0-rc.1"
+
+# ──────────────────────────────────────────────────────────────
+# FORCE crates.io to build with panic=abort + no std linking
+# ──────────────────────────────────────────────────────
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
+# Optional but recommended: make it explicit for all profiles
+[profile.test]
+panic = "abort"
+
+[profile.bench]
+panic = "abort"
